Load collections from firebase
npm install -g firebase-tools
firebase login
--->create deployment directory/modify outputPath of angular.json
cd .\deploments
firebase init
ng build
firebase deploy

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/bzg-poke-app-two",
+            "outputPath": "D:\\Bizagi\\CursoFront\\deployments\\public",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
